@@ -6,7 +6,6 @@ import org.slf4j.LoggerFactory;
 import org.slf4j.MarkerFactory;
 
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 public abstract class BaseConnectionDispatcher<T extends BaseConnectionObserver> extends BaseDispatcher<T>  {
 
@@ -23,7 +22,7 @@ public abstract class BaseConnectionDispatcher<T extends BaseConnectionObserver>
         observer.stream()
                 .filter(o -> o.getConnectionId() != null)
                 .filter(o -> o.getConnectionId().equals(connectionId))
-                .collect(Collectors.toList())
+                .toList()
                 .forEach(o -> {
                     if (LOGGER.isTraceEnabled()) {
                         LOGGER.trace(MarkerFactory.getMarker(ConnectionHolder.getInstance().getConfig(connectionId).getName()),
