@@ -1,20 +1,20 @@
 package org.correomqtt.business.keyring;
 
-import org.correomqtt.plugin.manager.PluginManager;
 import org.correomqtt.plugin.spi.KeyringHook;
+import org.correomqtt.plugin.manager.PluginManager;
 
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class KeyringFactory {
 
-    public static Keyring create() {
-        return getSupportedKeyrings()
-                .stream()
-                .findFirst()
-                .orElseThrow(() -> new KeyringException("No supported keyring backend found."));
+    private KeyringFactory(){
+        // empty constructor
+    }
+
+    public static List<Keyring> create() {
+        return new ArrayList<>(getSupportedKeyrings());
     }
 
     public static Keyring createKeyringByIdentifier(String identifier) {
@@ -29,13 +29,14 @@ public class KeyringFactory {
         return PluginManager.getInstance().getExtensions(KeyringHook.class)
                 .stream()
                 .sorted(Comparator.comparingInt(Keyring::getSortIndex))
-                .collect(Collectors.toList());
+                .map(kh -> (Keyring) kh)
+                .toList();
     }
 
     public static List<Keyring> getSupportedKeyrings() {
         return getAllKeyrings().stream()
                 .filter(Keyring::isSupported)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
